--- a/calculator/index.html
+++ b/calculator/index.html
@@ -10,18 +10,17 @@
     <div class="main">
 
 <div class="calculator">
-         <div class="display">
-           <input type="text" text="display">
-          </div>
+           <input id="input-box" placeholder="0" type="text" text="display">
+         
          <div class="buttons">
-<input type="button" value="AC">
-<input type="button" value="Del">
+<input  id="ac" type="button" value="AC">
+<input id="del"type="button" value="Del">
 <input type="button" value="%">
 <input type="button" value="/">
-<input type="button" value="7">
+<input type="button" value="7" >
 <input type="button" value="8">
 <input type="button" value="9">
-<input type="button" value="/">
+<input type="button" value="*">
 <input type="button" value="6">
 <input type="button" value="5">
 <input type="button" value="4">
@@ -33,13 +32,17 @@
 <input type="button" value="0">
 <input type="button" value="00">
 <input type="button" value=".">
-<input type="button" value="=">
+<input id="equal" type="button" value="=">
 
 </div>
 
 </div>
+<p></p>
 
 
     </div>
+    <p>Made By Shubham Sharma</p>
+   
+    <script src="index.js"></script>
 </body>
 </html>
