--- a/cryptosite/index.html
+++ b/cryptosite/index.html
@@ -29,7 +29,7 @@
 
         </div>
     </div>
-    <div class="main">
+    <div id="main">
 
         <div class="left-main">
           <img src="images/hero_3x_B.jpg">
@@ -43,15 +43,16 @@
 <div class="customer-details">
     <p>Email Address</p>
     <div class="details">
-        <input type="text" placeholder="xyz@gmail.com">
+        <input type="text" name="textbox" placeholder="xyz@gmail.com">
         <button id="signbtn">Sign Up</button>
     </div>
 </div>
 
         </div>
 
-
+<div class="cursor"></div>
 
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
