--- a/NewsApp/index.html
+++ b/NewsApp/index.html
@@ -43,7 +43,7 @@
     <div class="blog-card">
         <img src="https://placehold.co/600x400"alt="">
         <h2>This is my title</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, animi?Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius, ut?</p>
+        <p>Lorem ipsum dolor sit amet consectshjf fh adipisicing elit. Totam, animi?Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius, ut?</p>
     </div>
 </div>
 <p class="owner">Made By Shubham Sharma</p>
