--- a/E-commerce/index.html
+++ b/E-commerce/index.html
@@ -52,8 +52,14 @@
    <div class="banner">
   
     <img src="images/banner1.jpg" alt="">
-
-    <h1>Welcome to E-Commerce</h1>
+<div class="content">
+    <img src="images/banner1.jpg" alt="">
+    <div class="content">
+        <img src="images/banner1.jpg" alt="">
+        <div class="content">
+    <h1 class="typing">Welcome to E-Commerce</h1>
+    <h3>Your One-Stop Shop for Everything Electronics</h3>
+</div>
    </div>
         
    
