--- a/validation-form/index.html
+++ b/validation-form/index.html
@@ -13,17 +13,19 @@
 
     <div class="input-box">
         <input id="inputemail" type="email" placeholder="Email" required>
-        <span>wrong email</span>
+        <span class="erroremail"></span>
     </div>
     
 
     <div class="input-box">
         <input id="inputpassword" type="password" placeholder="Password" required>
-         <span>wrong password</span>
+         <span class="errorpass"></span>
     </div>
 
     <button>Submit</button>
 </div>
 <script src="index.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </body>
 </html>
