--- a/movies-app/index.html
+++ b/movies-app/index.html
@@ -12,9 +12,13 @@
     <div class="main">
 
         <div class="search-bar">
-            <input type="text" placeholder="Search Movies...">
+            <input id="input" type="text" placeholder="Search Movies...">
         </div>
-<div class="heading">POPULAR MOVIES</div>
+<!-- <div class="hiddentext"></div> -->
+        <button>
+    POPULAR MOVIES
+        </button>
+
 
         <div class="cards">
 <!-- here is my first img-container div and other are dynamcally loaded using api or js -->
