--- a/course-selection-form/course.html
+++ b/course-selection-form/course.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="passwordfield">
                     <label for="password">Password</label>
-            <input type="password" name="password" autocomplete="off"  required id="password" placeholder="Password must be minimum 4 characters" >
+            <input   type="password" name="password" autocomplete="off"   id="password" minlength="4" required placeholder="Password must be minimum 4 characters" >
                     <span class="show">show</span>
 
                     
